fix quest section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="pd20 space_between flex">
                     <div class="cards_second_section border">
                         <div class="border_item flex justy_center align_center">
-                            <i class="fa-solid fa-user-tie pdr5"></i> <div>Singolo</div>
+                            <i class="fa-solid fa-user-tie pdr2"></i> <div>Singolo</div>
                         </div>
                         <div class="main_container_big">
                             <div class="main_container_big">
@@ -105,10 +105,10 @@
                                     <i class="fa-solid fa-user-tie"></i> 1 Utente
                                 </div>
                                 <div class="pdb15 flex align_start">
-                                    <i class="fa-solid fa-folder pdr5"></i> <div>5 TB di spazio di archiviazione sicuro</div>
+                                    <i class="fa-solid fa-folder pdr2"></i> <div>5 TB di spazio di archiviazione sicuro</div>
                                 </div>
                                 <div class="paddin_before_buttons flex align_start">
-                                    <i class="fa-solid fa-share-nodes pdr5"></i> <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                                    <i class="fa-solid fa-share-nodes pdr2"></i> <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
                                 </div>
                                 <a href="#">
                                     <button class="bottone_prova_gratuita wth100 pdb15">
@@ -119,10 +119,10 @@
                                     <div class="riga"></div>
                                     <h5 class="pdb15 pdl5">Punti salienti del piano</h5>
                                     <div class="pdb15 flex">
-                                        <i class="fa-solid fa-check link_blu pdr5"></i> <div>Invia file fino a 100 GB con Dropbox Transfert</div>
+                                        <i class="fa-solid fa-check link_blu pdr2"></i> <div>Invia file fino a 100 GB con Dropbox Transfert</div>
                                     </div>
                                     <div class="pdb15 flex">
-                                        <i class="fa-solid fa-check link_blu pdr5"></i> <div>Cartelle offline su dispositivi mobili</div>
+                                        <i class="fa-solid fa-check link_blu pdr2"></i> <div>Cartelle offline su dispositivi mobili</div>
                                     </div>
                             </div>
                         </div>
@@ -131,7 +131,7 @@
 
                     <div class="cards_second_section border">
                         <div class="border_item flex justy_center align_center">
-                            <i class="fa-solid fa-people-group pdr5"></i> <div>Team</div>
+                            <i class="fa-solid fa-people-group pdr2"></i> <div>Team</div>
                         </div>
                         <div class="main_container_big">
                             <div class="main_container_big">
@@ -142,10 +142,10 @@
                                     <i class="fa-solid fa-people-group"></i> 3 o più utenti
                                 </div>
                                 <div class="pdb15 flex align_start">
-                                    <i class="fa-solid fa-folder pdr5"></i> <div>Tutto lo spazio di cui ha bisogno il tuo team</div>
+                                    <i class="fa-solid fa-folder pdr2"></i> <div>Tutto lo spazio di cui ha bisogno il tuo team</div>
                                 </div>
                                 <div class="paddin_before_buttons flex align_start">
-                                    <i class="fa-solid fa-share-nodes pdr5"></i> <div>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</div>
+                                    <i class="fa-solid fa-share-nodes pdr2"></i> <div>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</div>
                                 </div>
                                 <a href="#">
                                     <button class="bottone_prova_gratuita wth100 pdb15">
@@ -156,19 +156,19 @@
                                     <div class="riga"></div>
                                     <h5 class="pdb15 pdl5">Punti salienti del piano</h5>
                                     <div class="pdb15 flex">
-                                        <i class="fa-solid fa-check link_blu pdr5"></i> <div>Nessun limite di spazio per i file</div>
+                                        <i class="fa-solid fa-check link_blu pdr2"></i> <div>Nessun limite di spazio per i file</div>
                                     </div>
                                     <div class="pdb15 flex">
-                                        <i class="fa-solid fa-check link_blu pdr5"></i> <div>Cartelle offline su dispositivi mobili</div>
+                                        <i class="fa-solid fa-check link_blu pdr2"></i> <div>Cartelle offline su dispositivi mobili</div>
                                     </div>
                                     <div class="pdb15 flex">
-                                        <i class="fa-solid fa-check link_blu pdr5"></i> <div>Risparmio del 50% rispetto alle iscrizioni singole</div>
+                                        <i class="fa-solid fa-check link_blu pdr2"></i> <div>Risparmio del 50% rispetto alle iscrizioni singole</div>
                                     </div>
                                     <div class="pdb15 flex">
-                                        <i class="fa-solid fa-check link_blu pdr5"></i> <div>Possibilità di inserire nuovi membri del team</div>
+                                        <i class="fa-solid fa-check link_blu pdr2"></i> <div>Possibilità di inserire nuovi membri del team</div>
                                     </div>
                                     <div class="pdb15 flex">
-                                        <i class="fa-solid fa-check link_blu pdr5"></i> <div>Gestione dei permessi in base ai ruoli</div>
+                                        <i class="fa-solid fa-check link_blu pdr2"></i> <div>Gestione dei permessi in base ai ruoli</div>
                                     </div>
                             </div>
                         </div>
@@ -176,7 +176,7 @@
 
                     <div class="cards_second_section border">
                         <div class="border_item flex justy_center align_center">
-                            <i class="fa-solid fa-building pdr5"></i> <div>Azienda</div>
+                            <i class="fa-solid fa-building pdr2"></i> <div>Azienda</div>
                         </div>
                         <div class="main_container_big">
                             <div class="main_container_big">
@@ -187,10 +187,10 @@
                                     <i class="fa-solid fa-user-tie"></i> 10 o più utenti
                                 </div>
                                 <div class="pdb15 flex align_start">
-                                    <i class="fa-solid fa-folder pdr5"></i> <div>Soluzioni personalizzabili per la tua azienda</div>
+                                    <i class="fa-solid fa-folder pdr2"></i> <div>Soluzioni personalizzabili per la tua azienda</div>
                                 </div>
-                                <div class="pdb18 flex align_start">
-                                    <i class="fa-solid fa-share-nodes pdr5"></i> <div>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala </div>
+                                <div class="paddin_before_buttons flex align_start">
+                                    <i class="fa-solid fa-share-nodes pdr2"></i> <div>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala </div>
                                 </div>
                                 <a href="#">
                                     <button class="bottone_prova_gratuita wth100 pdb15">
@@ -201,13 +201,13 @@
                                     <div class="riga"></div>
                                     <h5 class="pdb15 pdl5">Punti salienti del piano</h5>
                                     <div class="pdb15 flex">
-                                        <i class="fa-solid fa-check link_blu pdr5"></i> <div>Cartelle offline su dispositivi mobili</div>
+                                        <i class="fa-solid fa-check link_blu pdr2"></i> <div>Cartelle offline su dispositivi mobili</div>
                                     </div>
                                     <div class="pdb15 flex">
-                                        <i class="fa-solid fa-check link_blu pdr5"></i> <div>Servizio assistenza 24/h</div>
+                                        <i class="fa-solid fa-check link_blu pdr2"></i> <div>Servizio assistenza 24/h</div>
                                     </div>
                                     <div class="pdb15 flex">
-                                        <i class="fa-solid fa-check link_blu pdr5"></i> <div>Possibilità di personalizzazione totale</div>
+                                        <i class="fa-solid fa-check link_blu pdr2"></i> <div>Possibilità di personalizzazione totale</div>
                                     </div>
                             </div>
                         </div>
@@ -420,27 +420,33 @@
                 <div>
                     <hr>
                 </div>
-                <div class="flex align_center space_between quest pd40">
-                    <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
-                    <i class="fa-solid fa-chevron-down"></i>
+                <div class="quest_1">
+                    <div class="flex align_center space_between quest_1 pd40">
+                        <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, officiis cum. Aut quidem totam, accusantium debitis atque reiciendis quis adipisci esse error, unde ratione id odit quae nam veritatis? Illum vitae officia accusamus similique debitis cumque delectus vel quos labore.</p>    
                 </div>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, officiis cum. Aut quidem totam, accusantium debitis atque reiciendis quis adipisci esse error, unde ratione id odit quae nam veritatis? Illum vitae officia accusamus similique debitis cumque delectus vel quos labore.</p>
                 <div class="pdb15">
                     <hr>
                 </div>
-                <div class="flex align_center space_between quest pd40">
-                    <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
-                    <i class="fa-solid fa-chevron-down"></i>
+                <div class="quest_1">
+                    <div class="flex align_center space_between quest_1 pd40">
+                        <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, officiis cum. Aut quidem totam, accusantium debitis atque reiciendis quis adipisci esse error, unde ratione id odit quae nam veritatis? Illum vitae officia accusamus similique debitis cumque delectus vel quos labore.</p>    
                 </div>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, officiis cum. Aut quidem totam, accusantium debitis atque reiciendis quis adipisci esse error, unde ratione id odit quae nam veritatis? Illum vitae officia accusamus similique debitis cumque delectus vel quos labore.</p>
                 <div class="pdb15">
                     <hr>
                 </div>
-                <div class="flex align_center space_between quest pd40">
-                    <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
-                    <i class="fa-solid fa-chevron-down"></i>
+                <div class="quest_1">
+                    <div class="flex align_center space_between quest_1 pd40">
+                        <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, officiis cum. Aut quidem totam, accusantium debitis atque reiciendis quis adipisci esse error, unde ratione id odit quae nam veritatis? Illum vitae officia accusamus similique debitis cumque delectus vel quos labore.</p>    
                 </div>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, officiis cum. Aut quidem totam, accusantium debitis atque reiciendis quis adipisci esse error, unde ratione id odit quae nam veritatis? Illum vitae officia accusamus similique debitis cumque delectus vel quos labore.</p>
 
                 <div>
                     <hr>
@@ -554,7 +560,7 @@
                 </div>
             </div>           
             <div class="riga_footer"></div>
-            <div class="pdb40"><i class="fa-solid fa-earth-americas gray pdr5"></i><span class="gray">Italiano</span> <i class="fa-solid fa-caret-up gray"></i></div>
+            <div class="pdb40"><i class="fa-solid fa-earth-americas gray pdr2"></i><span class="gray">Italiano</span> <i class="fa-solid fa-caret-up gray"></i></div>
         </div> 
     </footer>
 </body>
